--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: MineTweet_for_Plugin
-main: com.ittekikun.plugin.minetweet.MineTweet
+main: com.test.MineTweet
 version: 1.48
 description: twitter on BUKKIT Server.
 authors: [ittekikun]
