プレイヤー死亡関連実装 人が居ない為デバッグできず

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: MineTweet_for_Plugin
-main: MineTweet
+main: com.ittekikun.plugin.minetweet.MineTweet
 version: 1.48
 description: Twitter on your Server.
 authors: [ittekikun]
