--- a/src/main/resources/main.yml
+++ b/src/main/resources/main.yml
@@ -3,7 +3,7 @@
 # @license    LGPLv3 ※Twitter4JはApache License 2.0で配布されています。
 # @copyright  Copyright ittekikun 2013-2016
 #
-#GUICertify: GUIで認証するか(true推奨。CUIOS向け)
+#UseMyConsumerKey: 自分のAPIキーを使いたい場合はtrueにして各自設定して下さい。
 #consumerKey: (GUI認証をOFFにした時に使用)詳細はご自分でお調べ下さい。 以下3つも同等 ※誤って空白を入れないように
 #consumerSecret:
 #accessToken:
@@ -11,7 +11,7 @@
 #
 #VersionCheck: ログイン時にバージョンチェックをするか(OPとMineTweet.infoの権限を持ってる人にだけ表示されます)
 
-GUICertify: true
+UseMyConsumerKey: false
 consumerKey: xxxxxxxxxx
 consumerSecret: xxxxxxxxxx
 accessToken: xxxxxxxxxx
