バージョンチェッククラスの誤字修正 Configファイルの追記修正

--- a/src/main/resources/bot.yml
+++ b/src/main/resources/bot.yml
@@ -5,7 +5,7 @@
 #
 #UseBot: BOT機能を使用するか ※BETA機能
 #BotMessageList:
-#  - ここにBOTでツイートしたいメッセージを指定します※115字以上はMineTweetの仕様でツイートできません。
+#  - ここにBOTでツイートしたいメッセージを指定します※タイムスタンプを入れて150字までです。
 #  - 多分いくつでも書けます↓見本
 #  - 【BOT】鯖管は電ちゃんが好きです！
 #TweetCycle: 上記で指定したメッセージを何秒間隔でツイートするかを設定できます（Twitterの制限もあるので2時間間隔以上をおすすめします）7200秒→2時間
